--- a/src/main/resources/static/modePage.html
+++ b/src/main/resources/static/modePage.html
@@ -46,7 +46,8 @@
     }
     button:hover{
         color: #42a5f5;
-        transition: text-shadow 1s,color 1s;
+        box-shadow: 0 4px 6px 0 rgba(0,0,0,0.24), 0 8px 20px 0 rgba(0,0,0,0.19);
+        transition: box-shadow 1s,text-shadow 1s,color 1s;
 
     }
     .imgcontainer {
@@ -88,7 +89,7 @@
 <body>
 <div id="upperlevel">
     <div class="uppersection" id="homesection">
-        <button class="upperbtn" type="button" class="homebtn">
+        <button class="upperbtn" type="button" >
             <span class="glyphicon glyphicon-home"></span> Home
         </button>
     </div>
