--- a/src/main/resources/static/articleView.html
+++ b/src/main/resources/static/articleView.html
@@ -32,8 +32,9 @@
         left:32cm;
     }
      button:hover{
-        color: #42a5f5;
-        transition: text-shadow 1s,color 1s;
+         color: #42a5f5;
+         box-shadow: 0 4px 6px 0 rgba(0,0,0,0.24), 0 8px 20px 0 rgba(0,0,0,0.19);
+         transition: box-shadow 1s,text-shadow 1s,color 1s;
 
     }
     .imgcontainer {
