--- a/src/main/resources/static/userPage.html
+++ b/src/main/resources/static/userPage.html
@@ -11,7 +11,7 @@
 
 <style>
     body {
-        background-color: #1aa8a8;
+        background-color: lightblue;
         margin: 0 auto;
     }
     .upperbtn {
@@ -33,7 +33,7 @@
 
     #upperlevel {
         width: 100%;
-        height: 300px;
+        height: 200px;
         text-align: center;
     }
 
@@ -43,6 +43,7 @@
         margin-right: auto;
         width: 400px;
         height:200px;
+
     }
 
     img.logo {
@@ -71,7 +72,7 @@
         margin: 20px auto;
     }
     #middleblock_left{
-        background-color:rgba(3, 155, 229,0.5);
+        /*background-color:rgba(3, 155, 229,0.5);*/
 
         margin-left:20px;
         margin-right:20px;
@@ -83,15 +84,15 @@
         height:100%;
         width: 31%;
 
-        border: 1px solid rgba(0,0,0,0.12);
-        box-shadow: 0 2px 5px 0 rgba(0,0,0,0.26);
-        border-radius:3px;
+        border: 1px solid rgba(0,0,0,0.08);
+        font-family:"RooneySans-Bold", "Lucida Grande", "Lucida Sans Unicode", "Trebuchet MS", sans-serif;
+
 
         float:left;
     }
 
     #middleblock_mid{
-        background-color:rgba(3, 155, 229,0.5);
+        /*background-color:rgba(3, 155, 229,0.5);*/
 
 
         float:left;
@@ -101,14 +102,14 @@
         width: 31%;
         padding:20px 100px;
 
-        border: 1px solid rgba(0,0,0,0.12);
-        box-shadow: 0 2px 5px 0 rgba(0,0,0,0.26);
-        border-radius:3px;
+        border: 1px solid rgba(0,0,0,0.08);
+
+
 
     }
 
     #middleblock_right{
-        background-color:rgba(3, 155, 229,0.5);
+        /*background-color:rgba(3, 155, 229,0.5);*/
 
 
         margin-left:20px;
@@ -119,9 +120,9 @@
         height:100%;
         width: 32%;
 
-        border: 1px solid rgba(0,0,0,0.12);
-        box-shadow: 0 2px 5px 0 rgba(0,0,0,0.26);
-        border-radius:3px;
+        border: 1px solid rgba(0,0,0,0.08);
+
+
         float:left;
 
     }
@@ -129,7 +130,7 @@
         color: black;
         font-size:30px;
         font-weight: bold;
-        font-family: 'Arial Black',sans-serif
+        font-family:"RooneySans-Bold", "Lucida Grande", "Lucida Sans Unicode", "Trebuchet MS", sans-serif;
     }
 
     #footer{
@@ -253,11 +254,13 @@
         display: block;
     }
 
+    dl{
 
+    }
     dd{
         color: #fefefe;
         font-size:17px;
-        font-family:"Lucida Sans Typewriter",monospace;
+
     }
 
 
@@ -279,9 +282,7 @@
         ">
     </div >
 
-    <div id = "greeting_box">
-        <span>Welcome to home, </span>
-    </div>
+
 </div>
 
 
