all modals have fadeIn effect now

--- a/src/main/resources/static/departmentPage.html
+++ b/src/main/resources/static/departmentPage.html
@@ -1,19 +1,13 @@
 <!DOCTYPE html>
 <html>
+<link rel="stylesheet" href="src/css/custombox.css">
+<script src="src/js/custombox.js"></script>
 
 <body>
 <div id="usersection" align="right">
     <button id="userbtn" type="button"></button>
 </div>
 <div class="mainPage" style="height: 100%">
-    <!--<header class="upperTitle">-->
-        <!--<img class="logo" src="logo2.jpg" alt="logo"  style="-->
-        <!--width: 160px;-->
-        <!--height:140px;-->
-        <!--margin-left:42%;-->
-
-        <!--">-->
-    <!--</header>-->
 
     <div class="selected">
         <h1>Selected</h1>
@@ -69,7 +63,10 @@
 
 <script src="http://code.jquery.com/jquery-latest.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script>
 
+</script>
 <script type="text/javascript">
 
     function add(){
@@ -123,6 +120,13 @@ window.onload = function(){
 
     $(function(callback){
         $(".department").find(":button").click(function() {
+            $('this').on('click', function( e ) {
+                Custombox.open({
+                    target: '#myModal',
+                    effect: 'newspaper'
+                });
+                e.preventDefault();
+            });
             modal.style.display = "block";
             var department = $(this).val();
 
@@ -263,7 +267,6 @@ window.onload = function(){
                                 console.log(error);
                             }
                         });
-
                     });
                     window.location.replace('/diseaseDescriptionPage');
                 });
@@ -274,6 +277,7 @@ window.onload = function(){
     });
     span.onclick = function() {
         modal.style.display = "none";
+
         var symptomList = document.getElementById('symptomList');
         while (symptomList.firstChild) {
             symptomList.removeChild(symptomList.firstChild);
@@ -349,7 +353,24 @@ window.onload = function(){
         border: 1px solid #888;
         width: 80%;
         height: auto;
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+        -webkit-animation-name: fadeIn;
+        -webkit-animation-duration: 0.6s;
+        animation-name: fadeIn;
+        animation-duration: 0.6s
     }
+
+    /* Add Animation */
+    @-webkit-keyframes fadeIn {
+    from {opacity: 0}
+    to {opacity: 1}
+    }
+
+    @keyframes fadeIn {
+    from {opacity: 0}
+    to {opacity: 1}
+    }
+
 
     /* The Close Button */
     .close {
