--- a/src/main/resources/static/createTextPage.html
+++ b/src/main/resources/static/createTextPage.html
@@ -40,7 +40,6 @@
     .modal {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
     padding-top: 100px; /* Location of the box */
     left: 0;
     top: 0;
@@ -60,6 +59,21 @@
     border: 1px solid #888;
     width: 50%;
     height: 26%;
+    -webkit-animation-name: fadeIn;
+    -webkit-animation-duration: 0.6s;
+    animation-name: fadeIn;
+    animation-duration: 0.6s
+    }
+
+    /* Add Animation */
+    @-webkit-keyframes fadeIn {
+    from {opacity: 0}
+    to {opacity: 1}
+    }
+
+    @keyframes fadeIn {
+    from {opacity: 0}
+    to {opacity: 1}
     }
 
     /* The Close Button */
