--- a/src/main/resources/static/nearbyPage.html
+++ b/src/main/resources/static/nearbyPage.html
@@ -26,7 +26,7 @@
         margin: auto;
         width: 100%;
         height: 350px;
-        background-color: grey;
+        background-color: #1aa8b9;
     }
 
     .modal {
@@ -45,9 +45,30 @@
     border: 1px solid #888;
     width: 80%;
     height: auto;
+    -webkit-animation-name: fadeIn;
+    -webkit-animation-duration: 0.6s;
+    animation-name: fadeIn;
+    animation-duration: 0.6s
+    }
+
+    /* Add Animation */
+    @-webkit-keyframes fadeIn {
+    from {opacity: 0}
+    to {opacity: 1}
+    }
+
+    @keyframes fadeIn {
+    from {opacity: 0}
+    to {opacity: 1}
     }
 
     .modal-dialog{
+    background-color: #1aa8b9;
+
+    -webkit-animation-name: fadeIn;
+    -webkit-animation-duration: 2s;
+    animation-name: fadeIn;
+    animation-duration: 2s
     width: auto!important;
     }
 
@@ -171,8 +192,6 @@
             </div>
         </div>
     </div>
-
-
 </div>
 </body>
 <script>
@@ -183,6 +202,7 @@
     }
 </script>
 <script src="http://code.jquery.com/jquery-latest.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBkBCw71wgIwBuiEr8_OPDuN4yYJ9WVw0I&libraries=places&callback=initMap" async defer></script>
 <script>
 function getCookie(c_name)
 {
@@ -227,6 +247,7 @@ $(document).ready(function(){
         }
     });
 });
+
 function initMap() {
     if (navigator.geolocation) {
         navigator.geolocation.getCurrentPosition(function (position) {
@@ -359,5 +380,4 @@ $(document).ready(function(){
     });
 });
 </script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBkBCw71wgIwBuiEr8_OPDuN4yYJ9WVw0I&libraries=places&callback=initMap" async defer></script>
 </html>
