--- a/src/main/resources/static/searchPage.html
+++ b/src/main/resources/static/searchPage.html
@@ -33,9 +33,22 @@
     border: 1px solid #888;
     width: 80%;
     height: auto;
-
+    -webkit-animation-name: fadeIn;
+    -webkit-animation-duration: 0.6s;
+    animation-name: fadeIn;
+    animation-duration: 0.6s
     }
 
+    /* Add Animation */
+    @-webkit-keyframes fadeIn {
+    from {opacity: 0}
+    to {opacity: 1}
+    }
+
+    @keyframes fadeIn {
+    from {opacity: 0}
+    to {opacity: 1}
+    }
 
     /* The Close Button */
     .close {
@@ -315,26 +328,26 @@ function search() {
                 console.log("level3");
             }
             $("#diseaseList").find(":button").click(function() {
-            console.log("!!!");
-            var tagText = $(this).val();
-            $(function(callback) {
-                $.ajax({
-                    url : '/getDisease',
-                    type : 'POST',
-                    data : JSON.stringify(tagText),
-                    contentType: "application/json; charset=utf-8",
-                    success : function(data) {
-                        callback(data);
-                        console.log("success");
-                    },
-                    error : function (error) {
-                        console.log(error);
-                    }
-                });
+                console.log("!!!");
+                var tagText = $(this).val();
+                $(function(callback) {
+                    $.ajax({
+                        url : '/getDisease',
+                        type : 'POST',
+                        data : JSON.stringify(tagText),
+                        contentType: "application/json; charset=utf-8",
+                        success : function(data) {
+                            callback(data);
+                            console.log("success");
+                        },
+                        error : function (error) {
+                            console.log(error);
+                        }
+                    });
 
+                });
+                window.location.replace('/diseaseDescriptionPage');
             });
-            window.location.replace('/diseaseDescriptionPage');
-        });
         });
 
     });
@@ -346,7 +359,6 @@ function search() {
             diseaseList.removeChild(diseaseList.firstChild);
         }
     }
-
 }
 
 </script>
