--- a/src/main/resources/static/DiseaseDescriptionPage.html
+++ b/src/main/resources/static/DiseaseDescriptionPage.html
@@ -192,7 +192,7 @@
 
 <div class="left" style="width: 180px">
     <h1 style="font-size:20px">Related articles</h1>
-    <ul id="articleList">
+    <ul id="articleList" style="text-align: center;">
 
     </ul>
 </div>
@@ -205,6 +205,10 @@
 
 <p id="description" style="color:white; margin-left:6.3cm"></p>
     <h1 id="symptom" style="color:white;margin-left:6.3cm"> Symptoms</h1>
+    <div style=" margin-left:6cm"><ul id="symptomList" style="color:#fefefe">
+    </ul>
+    </div>
+
 </div>
     <div class="modal" id="my-modify-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
         <div class="modal-content" style="width: 800px;height:auto;margin-left: auto;margin-right: auto;margin-top: 120px;">
@@ -236,6 +240,7 @@
 
 <script src="http://code.jquery.com/jquery-latest.js"></script>
 <script>
+
 function setCookie(c_name,value,expiredays)
 {
     var exdate=new Date()
@@ -346,10 +351,39 @@ $(document).ready(function(){
             console.log("i set value");
 
             var disease = obj.name;
+            Diseasename = obj.name;
             console.log("------");
             console.log(disease);
             var obj2 = {};
             obj2.name = disease;
+           var sym = $.ajax({
+                    url: '/SymptomByDisease',
+                    type: 'POST',
+                    dataType: 'json',
+                    data: JSON.stringify(obj2),
+                    contentType: "application/json; charset=utf-8",
+                    success: function (data) {
+                        callback(data);
+                    },
+                    error: function (error) {
+                        console.log(error);
+                    }
+
+                })
+                var sym = sym.done(function(result) {
+                console.log(sym.responseText);
+                var symptoms = JSON.parse(sym.responseText);
+                var length = symptoms.length;
+                var oSymptom = document.getElementById("symptomList");
+                for(var a = 0; a < symptoms.length;a++){
+                    oElentment = document.createElement("li");
+                    oElentment2 = document.createElement("br")
+                    oTextNode = document.createTextNode(symptoms[a].name);
+                    oElentment.appendChild(oTextNode);
+                    oSymptom.appendChild(oElentment);
+
+                }
+            });
             var articleList = $.ajax({
                 url: '/SendDisease',
                 type: 'POST',
