--- a/src/main/resources/static/changeEmail.html
+++ b/src/main/resources/static/changeEmail.html
@@ -39,6 +39,7 @@
   <div style="margin-top: 200px" ><center><div style="color: #fefefe">Email: <input id="11" type="text" name="email" size="30" placeholder="Enter New Email Address">
       <button id="submit" onclick="validate_email()" type="button">Change!</button>
       <button onclick="add()" type="button">Cancel</button>
+  </div></center></div>
 </form>
 </body>
 
