--- a/src/main/resources/static/changepasswordPage.html
+++ b/src/main/resources/static/changepasswordPage.html
@@ -107,8 +107,7 @@
             <input type="password" placeholder="Enter New Password" id="newpassword" name="newpassword" required><br>
             <input type="password" placeholder="Renter New Password" id="newpassword2"><br>
             <button id="submit" onclick="check()" type="button">Change!</button>
-            <button id="submit" onclick="add()" type="button">Cancel</button>
-
+            <button id="submit?" onclick="add()" type="button">Cancel</button>
         </div>
 
     </form>
